name: strato-p2p-client
version: 0.0.4
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: BSD3
description:  
    The client described in the Ethereum Yellowpaper

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.4

executable strato-p2p-client
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , base16-bytestring
                 , blockapps-data
                 , bytestring
                 , crypto-pubkey
                 , crypto-pubkey-types
                 , crypto-random
                 , ethereum-encryption
                 , merkle-patricia-db
                 , blockapps-util
                 , haskoin
                 , hflags
                 , monad-logger
                 , mtl
                 , network
                 , persistent-postgresql
                 , random
                 , resourcet
                 , strato-conf
                 , strato-p2p-client
                 , time
                 , transformers
    main-is: Main.hs
    ghc-options: -Wall -O2
    buildable: True
    hs-source-dirs: exec_src

library
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
--                 , array
                 , binary
                 , blockapps-data
                 , bytestring
                 , cryptohash
                 , crypto-pubkey-types
                 , esqueleto
                 , ethereum-encryption
                 , ethereum-rlp
                 , blockapps-util
                 , hflags
--                 , hminer
                 , monad-logger
                 , mtl
                 , network
                 , persistent-postgresql
                 , resourcet
                 , safe
                 , text
                 , time
                 , transformers
                 , ansi-wl-pprint
    exposed-modules: 
                   Blockchain.BlockChain
                   Blockchain.BlockSynchronizer
                   Blockchain.Communication
                   Blockchain.Context
                   Blockchain.Data.Peer
--                   Blockchain.Data.TransactionReceipt
                   Blockchain.Data.Wire
                   Blockchain.Display
--                   Blockchain.JCommand
--                   Blockchain.Mining
                   Blockchain.Options
                   Blockchain.PeerDB
--                   Blockchain.SampleTransactions
    ghc-options: -Wall -O2
    buildable: True
    hs-source-dirs: src
