name: strato-p2p-client
version: 0.0.4
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: Apache-2.0
description:  
    The client described in the Ethereum Yellowpaper

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.4

executable strato-p2p-client
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , base16-bytestring
                 , blockapps-data
                 , blockapps-util
                 , bytestring
                 , conduit
                 , conduit-extra
                 , crypto-pubkey
                 , crypto-pubkey-types
                 , crypto-random
                 , ethereum-encryption
                 , ethereum-rlp
                 , haskoin
                 , hflags
                 , merkle-patricia-db
                 , monad-logger
                 , mtl
                 , network
                 , persistent-postgresql
                 , random
                 , resourcet
                 , stm-conduit
                 , strato-conf
                 , strato-p2p-client
                 , text
                 , time
                 , transformers
    main-is: Main.hs
    ghc-options: -Wall -O2
    buildable: True
    hs-source-dirs: exec_src

library
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
--                 , array
                 , binary
                 , blockapps-data
                 , bytestring
                 , conduit
                 , conduit-combinators
                 , conduit-extra
                 , cryptohash
                 , crypto-pubkey-types
                 , esqueleto
                 , ethereum-encryption
                 , ethereum-rlp
                 , blockapps-util
                 , hflags
                 , lens
                 , milena
                 , monad-logger
                 , mtl
                 , network
                 , persistent
                 , persistent-postgresql
                 , postgresql-simple
                 , resourcet
                 , safe
                 , split
                 , stm-conduit
                 , text
                 , time
                 , transformers
                 , ansi-wl-pprint
    exposed-modules: 
--                   Blockchain.BlockChain
                   Blockchain.BlockSynchronizer
--                   Blockchain.Communication
                   Blockchain.Context
                   Blockchain.Data.Peer
--                   Blockchain.Data.TransactionReceipt
                   Blockchain.Data.Wire
                   Blockchain.Display
                   Blockchain.Event
                   Blockchain.ExtMergeSources
--                   Blockchain.JCommand
--                   Blockchain.Mining
                   Blockchain.Options
                   Blockchain.PeerDB
                   Blockchain.RawTXNotify  
--                   Blockchain.SampleTransactions
                   Blockchain.TCPClientWithTimeout
    ghc-options: -Wall -O2
    buildable: True
    hs-source-dirs: src
